--- a/llc-texas-cost.html
+++ b/llc-texas-cost.html
@@ -41,9 +41,9 @@
                 <div class="12u">
 
                   <section>
-                    <p align="left"><a href="https://direct.sos.state.tx.us/help/help-corp.asp?pg=fee" target="_blank">The cost for filing an LLC with Texas Secretary of State is $300</a> (plus transaction fees) for the required Certificate of Formation. This can be done by anyone through the SOSDirect website or by a third party like us at BetterLegal.</p>
+                    <p align="left">The Texas Secretary of State charges a $300 fee to file your LLC's Certificate of Formation. The state filing fee is required regardless of how you choose to set up your LLC.</p>
 
-                    <p align="left">One of the major benefits to using our service is that we'll worry about navigating the State's confusing and poorly laid out website and make sure all the information is submitted correctly. You'll also receive a top quality Company Agreement which lays out the details of how your LLC is run and by whom. Finally, we'll also obtain your Employer Identification Number from the Federal government which is often required to establish your LLCs bank account (to keep your LLC and personal assets separate).</p>
+                    <p align="left">If you use BetterLegal to set up your business, we'll run a search to make sure the name you want to use for your LLC is available, and make sure your Certificate of Formation is correctly filled out and submitted. You'll also receive a thorough Company Agreement that governs your LLC's ownership, management, operations, and other important matters. Finally, we'll obtain your Employer Identification Number from the Federal government, which is typically required for tax purposes and for setting up your LLC's bank account.</p>
                     <footer>
                       <ul class="buttons">
                         <li><a class="button" href="/create-a-texas-llc.html" target="_self">Create a Texas LLC</a></li>
@@ -59,7 +59,7 @@
 
       <!-- Footer -->
         <footer id="footer">
-          <p align="left" style="font-size:.85em; letter-spacing:0; line-height:1.25em;"><b>Important Disclaimer:</b> BetterLegal is not a law firm, nor is it a substitution for a law firm or an attorney. BetterLegal strives to facilitate the process by which individuals set up their businesses, but we do not and cannot provide legal advice, explanations, options, opinions, or recommendations about legal rights, remedies, business structure and operations, use of business and legal forms, or general business and legal strategies. While your communications with us are protected by our Privacy Policy, they are not protected by the attorney-client privilege. Your access to and use of this website is subject to our Terms of Use.</p>
+          <p align="left" style="font-size:.85em; letter-spacing:0; line-height:1.25em;"><b>Important Disclaimer:</b> BetterLegal is not a law firm, nor is it a substitution for a law firm or an attorney. BetterLegal strives to facilitate the process by which individuals set up their businesses, but we do not and cannot provide legal advice, explanations, options, opinions, or recommendations about legal rights, remedies, business structure and operations, use of business and legal forms, or general business and legal strategies. While your communications with us are protected by our <a href="/privacy.html">Privacy Policy</a>, they are not protected by the attorney-client privilege. Your access to and use of this website is subject to our <a href="/terms.html">Terms of Use</a>.</p>
 
           <ul class="copyright">
             <li>&copy; BetterLegal Solutions LLC</li><li>Web Development by <a href="http://poseidonimaging.com">Poseidon Imaging</a></li>
