--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
 					<header class="special container">
 						<h2>Everything you need to start your company in 2 business days</h2>
-						<p>Services like LegalZoom and RocketLawyer take a minimum of 7 <strong>business</strong> days (their "Express Packages") to physically mail you binders of documents (many of which you don't even need). We're a 21st century company aiming at making this process easy and inexpensive, without unneccesary waste of time or paper.</p>
+						<p>Services like LegalZoom take a minimum of 7 <strong>business</strong> days (their "Express Packages") to physically mail you binders of documents (many of which you don't even need). We're a 21st century company aiming at making this process easy and inexpensive, without unneccesary waste of time or paper.</p>
 					</header>
 
 					<!-- Included -->
