Enlarged embedded version

--- a/roppolos.html
+++ b/roppolos.html
@@ -29,8 +29,9 @@
             <h2>Rent a Roppolo's Pizza Truck</h2>
           </header>
 
-
-          <iframe width="800" height="600" src="https://spacesift.com/event-rentals/pizza-on-wheels/?wl&iframe"></iframe>
+          <center>
+          <iframe width="800" height="1000" src="https://spacesift.com/event-rentals/pizza-on-wheels/?wl&iframe"></iframe>
+          </center>
 
         </article>
 
